# DynamicPFL

./: analyze.ipynb  anlayze.ipynb  data.py  examine_log.py  gep_torch_utils.py  gep_utils.py  gp_utils.py  init new console  main_base.py  main_base_gep.py  main_base_gep_gp.py  main_base_gep_private.py  main_base_gep_residual.py  main_base_gep_virtual_public_single_loader_groups.py  main_base_gp.py  net.py  options.py  ours gep.py  ours.py  ours_gep.py  pyproject.toml  requirements.txt  run_cifar10.sh  run_cifar10_basis_sweep.sh  run_cifar10_copy.sh  run_cifar10_dynamicPFL.sh  run_cifar10_dynamic_sweep.sh  run_cifar10_dynamic_sweep_gep.sh  run_cifar10_dynamic_sweep_no_noise_gep.sh  run_cifar10_equality_residual_sweep.sh  run_cifar10_equality_sweep.sh  run_cifar10_fedAvgSgdDp.sh  run_cifar10_history_sweep.sh  run_cifar10_public_sweep.sh  run_cifar10_sweep.sh  run_cifar10_sweep_gep.sh  run_cifar10_sweep_no_noise.sh  run_cifar10_sweep_no_noise_gep.sh  run_clip_res_for_noise_sweep.sh  run_conf_split_basis_sweep.sh  (+9 more)
data_load/: data.py  emg_utils.py  partitioned_data_loader.py
logs/: CIFAR10_base.txt  CIFAR10_ours.txt  SVHN_ours.txt
logs/CIFAR10_10_public_20_epochs_2_eps_0.02_sample_rate_sweep_history_size/: DynamicPFL.txt  FedAvgSgdDP.txt
logs/CIFAR10_10_public_5_basis_30_history/: DynamicPFL.txt  DynamicPFL_GEP.txt  FedAvgGep.txt  FedAvgSgdDP.txt
logs/baseline/: CIFAR10_base.txt  (+1 more)
run_scripts/: run_cifar10_dynamicPFL.sh  run_cifar10_fedAvgSgdDp.sh  run_cifar10_sweep_config.sh  run_cifar10_sweep_no_noise.sh  run_cifar10_sweep_no_noise_cofig.sh  run_svhn.sh
(+6 files in other folders)
