[tool.poetry]
name = "dynamicpfl-gp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.1"
torch = "^2.4.1"
torchvision = "^0.19.1"
fedlab = "^1.3.0"
gpytorch = "^1.13"
pypolyagamma = "^1.2.3"
wandb = "^0.18.1"
backpack-for-pytorch = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
